metadata/objects/GRAX_Account_Reporting_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Filter_Key_Id__c</fullName>
        <defaultValue>&quot;00N1h000000HkUw&quot;</defaultValue>
        <label>Filter Key Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Key__c</fullName>
        <defaultValue>&quot;graxopportunityindex__x.Account_Name_hidden_c__c&quot;</defaultValue>
        <label>Filter Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_ID__c</fullName>
        <label>Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cacheResults__c</fullName>
        <defaultValue>true</defaultValue>
        <label>cacheResults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>filterKeyIndex__c</fullName>
        <defaultValue>1</defaultValue>
        <label>filterKeyIndex</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>size__c</fullName>
        <defaultValue>&quot;small&quot;</defaultValue>
        <label>size</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>GRAX Account Reporting Setting</label>
    <pluralLabel>GRAX Account Reporting Settings</pluralLabel>
</CustomObject>